[PATCH] Fix footer alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -506,6 +506,9 @@ body {
   }
 
   .footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     padding: 0.25rem 0.5rem;
   }
 
